# pHRI-Vision-Robot-Workstation

./: README.md
CAD/: AGX_mount-to_VESA.3mf  AGX_mount-to_VESA.SLDPRT  AGX_mount-to_VESA.STL  AGX_mount-to_VESA_0.4n_0.3mm_PETG_MK4_1h46m.bgcode  LEAPMOTION_0.4n_0.2mm_PC_MK4IS_1h4m.bgcode  acopla 20x20 soporte realsense.3mf  acopla 20x20 soporte realsense.SLDPRT  acopla 20x20 soporte realsense.STL  acopla 20x20 soporte realsense_0.4n_0.2mm_PETG_MINIIS_37m.gcode  agx_foot_gpio_0.4n_0.2mm_PETG_MK4IS_1h7m.bgcode  gafas 2_0.4n_0.2mm_PLA_MK4_30m.bgcode  rotula soporte realsense.3mf  rotula soporte realsense.SLDPRT  rotula soporte realsense.STL  rotula soporte realsense_0.4n_0.2mm_PETG_MINIIS_14m.gcode  soporte 0 LeapMotion_0.4n_0.2mm_PC_MK4IS_56m.bgcode  soporte realsense 45 mono.3mf  soporte realsense 45 mono.SLDPRT  soporte realsense 45 mono.STL  soporte realsense 45 mono_0.4n_0.2mm_PC_MK4IS_1h22m.bgcode  soporte realsense 45-0 para 30 mono v2.3mf  soporte realsense 45-0 para 30 mono v2.SLDPRT  soporte realsense 45-0 para 30 mono v2.STL  soporte realsense 45-0 para 30 mono v2_0.4n_0.2mm_PETG_MK4IS_1h14m.bgcode  soporte realsense 45-30 para 30 mono v2.3mf  soporte realsense 45-30 para 30 mono v2.SLDPRT  (+12 more)
keypoints3d_ws/src/keypoints_3d/keypoints_3d/: CMakeLists.txt  package.xml
keypoints3d_ws/src/keypoints_3d/keypoints_3d/launch/: keypoint_3d.launch  keypoint_3d_kalman.launch  keypoint_3d_plotter.launch  keypoint_plotter.launch  keypoint_skeleton.launch
keypoints3d_ws/src/keypoints_3d/keypoints_3d/scripts/: keypoint_3d.py  keypoint_3d_kalman.py  keypoint_3d_plotter.py  keypoint_skeleton.py
(+20 files in other folders)
